# libfabric-cray

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  foobar
config/: fi_pkg.m4
contrib/: README  libfabric.doxyfile
include/: fi_list.h  fi_rbuf.h  prov.h
include/rdma/: fabric.h
man/: fi_gni.7.md
man/man7/: fi_gni.7
prov/gni/: Makefile.am  Makefile.include  configure.m4
prov/gni/ccan/: container_of.h  list.h
prov/gni/common/: atomics.h
prov/gni/contrib/: gnitest.supp
prov/gni/include/: fi_ext_gni.h  gnix.h  gnix_av.h  gnix_bitmap.h  gnix_cm.h  gnix_cm_nic.h  gnix_cntr.h  gnix_cq.h  gnix_datagram.h  gnix_ep.h  gnix_ep_msg.h  gnix_ep_rdm.h  gnix_eq.h  gnix_freelist.h  gnix_hashtable.h  gnix_mbox_allocator.h  gnix_mr.h  gnix_msg.h  gnix_nameserver.h  gnix_nic.h  gnix_priv.h  gnix_progress.h  gnix_rma.h  gnix_tags.h  gnix_util.h  gnix_vc.h  gnix_wait.h
prov/gni/src/: gnix.h  gnix_atomic.c  gnix_av.c  gnix_bitmap.c  gnix_cm.c  gnix_cm_nic.c  gnix_cntr.c  gnix_cq.c  gnix_cq.h  gnix_datagram.c  gnix_dom.c  gnix_ep.c  gnix_ep.h  gnix_ep_msg.c  gnix_ep_msg.h  gnix_ep_rcv.c  gnix_ep_rdm.c  gnix_ep_rdm.h  gnix_ep_send.c  gnix_eq.c  gnix_fabric.c  gnix_freelist.c  gnix_hashtable.c  gnix_init.c  gnix_mbox_allocator.c  gnix_mr.c  gnix_msg.c  gnix_nameserver.c  gnix_nameserver.h  gnix_nic.c  gnix_nic.h  gnix_progress.c  gnix_queue.c  gnix_rma.c  gnix_sep.c  gnix_tags.c  gnix_util.c  gnix_util.h  gnix_vc.c  gnix_vector.c  (+1 more)
prov/gni/test/: allocator.c  api.c  api_cq.c  av.c  bitmap.c  buddy_allocator.c  cancel.c  cm.c  cntr.c  common.h  cq.c  datagram.c  dlist-utils.c  dom.c  ep.c  eq.c  freelist.c  gnitest  hashtable.c  mr.c  nic.c  queue.c  rdm_atomic.c  rdm_dgram_rma.c  rdm_dgram_stx.c  rdm_fi_pcd_trecv_msg.c  rdm_rma.c  rdm_rw.c  rdm_rx_overrun.c  rdm_sr.c  rdm_tagged_sr.c  run_gnitest  sep.c  tags.c  utils.c  vc.c  vector.c  wait.c
src/: fabric.c  fi_tostr.c
src/unix/: osd.c
